--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@material/dialog": "^11.0.0",
     "apexcharts": "^3.18.1",
     "body-parser": "*",
     "bootstrap": "^4.6.0",
