--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "styles": [
 
               "src/styles.css",
-
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
@@ -93,7 +93,8 @@
             ],
             "styles": [
 
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           }
